tests/fails/vectorerror.t



terra foobar()
	var a : vector(int,morenonsense)
end


foobar()
